# common-lib

./: .gitignore  gpt_promts.py  pyproject.toml  requirements.txt  shared_fuctions.py
common_lib/: __init__.py  ai_models.py  ai_request.py  prueba.py
common_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
