[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-lib"
version = "0.1.0"
description = "Funciones compartidas para proyectos AI"
authors = [{ name="Miguel", email="miguel@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
